# HOLON-sweeper

./: .gitignore  README.md  analysis.py  analysis_config.yaml  base.yaml  bedrijventerrein.yaml  empty.yaml  experiment.py  main.py  pyproject.toml  single_base.yaml  test.json  test.py  todo.md
experiment_outputs/Bedrijventerrein - sweep on electric trucks/20230613_091341/: cost_benefit.csv  inputs.csv  results.csv
experiment_outputs/Bedrijventerrein - sweep on electric trucks/20230613_091341/scenarios/: 04350897-649a-45e9-b472-806a9827c4e8.json  22609f6f-b64a-4db2-bb3e-ae001ce6387d.json  4462dd61-71fe-4c17-9d56-51ef91396262.json  50e4269b-5b2b-43e6-97b0-e28bb61b8357.json  588c6a38-384e-4999-b6e9-0939a2afb626.json  cbb608ca-6291-456d-83a1-d6475772cd8a.json  d44aa308-0878-4930-80b0-ce8c24b18b47.json
fixture/: error_response.json  results.csv  succes_response.json
holonsweeper/: analysis.py  experiment.py
holonsweeper/results/: __init__.py  plotting.py
input/: __init__.py  experiment.py  inputelements.py
results/: __init__.py  export.py  import.py  importer.py  plotting.py  response.py
